# HuDa

./: README.md  camps_afg.html  conflict_afg_test.html  one.xlsx  osm_kabul_hospitals.html  pyproject.toml  requirements.txt  test.py  todo
huda/: API.py  __init__.py  csv.py  encoding_detector.py  json.py  mysql.py  postgres.py  spss.py  sqlite.py  xml.py
huda/Interoperability/: __init__.py  (+10 more)
huda_website/: about.html  contact.html  docs_analysis.html  docs_automation.html  docs_cleaning.html  docs_document_processing.html  docs_geospatial.html  docs_humanitarian_metrics.html  docs_interoperability.html  docs_ml4humanitarian.html  docs_opening.html  docs_transformation.html  docs_validation_quality.html  docs_visualization.html  index.html  theme.css
humdata/: __init__.py  csv_loader.py  excel_loader.py
testdata/: afg_conflict.geojson  afg_provinces.geojson  afghanistan_points.html  age_standardization.csv  agg.csv  agg_time.csv  auto_cleaner.csv  auto_txt_cleaner.csv  avg_weighted.csv  buffers_50km_afg.html  categ.csv  choropleth_afg.html  combined_dataset.csv  combined_dataset_inner.csv  combined_dataset_left.csv  combined_dataset_right.csv  conflict_afg.html  country_code.csv  date_range.csv  demographics.csv  facilities_cluster_afg.html  geocode.csv  gnd_stand.csv  growth.csv  hazard.geojson  hazard.html  hd_outliers.csv  heatmap_afg.html  humanitarian_data.db  mandatory_fields_check.csv  needs_coverage.csv  neg_value.csv  one.xlsx  osm_kabul_schools.html  outlier_isolation.csv  overlay_indicators_afg.html  percentage.csv  pivot.csv  popu_norm.csv  prov.csv  (+17 more)
(+195 files in other folders)
